syntax = "proto3";

package alexeykirinyuk.go_grpc_workshop.category_service.category_service.v1;

import "validate/validate.proto";

option go_package = "github.com/alexeykirinyuk/go_grpc_workshop/category_service/pkg/category_service;category_service";

service CategoryService {
    rpc GetCategoryById (GetCategoryByIdRequest) returns (GetCategoryByIdResponse);
}

message GetCategoryByIdRequest {
    uint64 id = 1 [(validate.rules).uint64.gt = 0];
}

message GetCategoryByIdResponse {
    // Категория
    Category category = 1;
}

message Category {
    uint64 id = 1;
    string name = 2;
}